erDiagram
    USER {
        UUID id PK
        string username UK "Unique username"
        string hashed_password
        boolean is_active
        boolean is_superuser
        datetime creation_date
    }

    DOCUMENT {
        UUID id PK
        string filename UK "Unique filename"
        string path
        boolean processed
        datetime upload_date
        UUID owner_id FK "Optional foreign key to USER"
    }

    TOPIC {
        UUID id PK
        string name UK "Unique topic name"
        string description "Optional description"
        JSON words "Dictionary of words and weights"
    }

    DOCUMENT_TOPIC_LINK {
        UUID document_id PK, FK "Composite PK, FK to DOCUMENT"
        UUID topic_id PK, FK "Composite PK, FK to TOPIC"
        float weight "Weight of the topic for the document"
    }

    USER ||--o{ DOCUMENT : owns
    %% DOCUMENT }o--o{ TOPIC : related_via DOCUMENT_TOPIC_LINK
    DOCUMENT ||--|{ DOCUMENT_TOPIC_LINK : links_to
    TOPIC ||--|{ DOCUMENT_TOPIC_LINK : links_to